Fixed introduction text alignment in screen.

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ img {
 }
 
 /* For desktop screens. */
-@media screen and (min-width:680px) {
+@media screen and (min-width:410px) {
     .introduction-text {
         font-size: calc(22px + 12 * ((100vw - 300px) / 1300));
         top: 40vh;
@@ -270,11 +270,15 @@ p, ul {
 
     .pricing-box-1 {
         border: #e9e9e9 1px solid;
+        border-left-style: none;
+        border-right-style: none;
     }
 
     .pricing-box-2 {
         border: #e9e9e9 1px solid;
         border-top-style: none;
+        border-left-style: none;
+        border-right-style: none;
     }
 
     .pricing-more-padding {
